@@ -4,7 +4,8 @@ INCLUDES =					\
 	$(cairo_includes)			\
 	$(POPPLER_QT_CXXFLAGS)			\
 	$(SPLASH_CFLAGS)			\
-	$(FREETYPE_CFLAGS)			
+	$(FREETYPE_CFLAGS)			\
+	$(FONTCONFIG_CFLAGS)
 
 
 poppler_includedir = $(includedir)/poppler
@@ -26,7 +27,8 @@ libpoppler_qt_la_SOURCES =			\
 libpoppler_qt_la_LIBADD = 			\
 	$(top_builddir)/poppler/libpoppler.la	\
 	$(POPPLER_QT_LIBS)			\
-	$(FREETYPE_LIBS)
+	$(FREETYPE_LIBS)			\
+	$(FONTCONFIG_LIBS)
 
 libpoppler_qt_la_LDFLAGS = -version-info 1:0:0
 
